--- a/pom.xml
+++ b/pom.xml
@@ -1,32 +1,41 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>net.trajano</groupId>
-  <artifactId>berkeleydb-httpcachestorage</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <name>BerkeleyDB HttpCacheStorage </name>
-  <description>A BerkeleyDB backed HttpCacheStorage to be used with CachingHttpClient of HttpClient project.</description>
-  <inceptionYear>2011</inceptionYear>
-  <dependencies>
-  	<dependency>
-  		<groupId>junit</groupId>
-  		<artifactId>junit</artifactId>
-  		<version>4.8.2</version>
-  		<type>jar</type>
-  		<scope>test</scope>
-  	</dependency>
-  	<dependency>
-  		<groupId>berkeleydb</groupId>
-  		<artifactId>je</artifactId>
-  		<version>3.2.76</version>
-  		<type>jar</type>
-  		<scope>compile</scope>
-  	</dependency>
-  	<dependency>
-  		<groupId>org.apache.httpcomponents</groupId>
-  		<artifactId>httpclient-cache</artifactId>
-  		<version>4.1.1</version>
-  		<type>jar</type>
-  		<scope>compile</scope>
-  	</dependency>
-  </dependencies>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>net.trajano</groupId>
+	<artifactId>berkeleydb-httpcachestorage</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+	<name>BerkeleyDB HttpCacheStorage </name>
+	<description>A BerkeleyDB backed HttpCacheStorage to be used with CachingHttpClient of HttpClient project.</description>
+	<inceptionYear>2011</inceptionYear>
+	<dependencies>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.8.2</version>
+			<type>jar</type>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient-cache</artifactId>
+			<version>4.1.1</version>
+			<type>jar</type>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<artifactId>je</artifactId>
+			<groupId>com.sleepycat</groupId>
+			<version>4.1.10</version>
+			<type>jar</type>
+			<scope>compile</scope>
+		</dependency>
+	</dependencies>
+	<repositories>
+		<repository>
+			<id>oracleReleases</id>
+			<name>Oracle Released Java Packages</name>
+			<url>http://download.oracle.com/maven</url>
+			<layout>default</layout>
+		</repository>
+	</repositories>
 </project>
